--- a/challengeIA.ipynb
+++ b/challengeIA.ipynb
@@ -28,7 +28,7 @@
         "id": "-Ui5fzcUMsmw",
         "outputId": "b6b92831-00ec-4dc7-a8c2-168c75dc3993"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
         "id": "tCFvSFkANZ6A",
         "outputId": "18b08cae-3d64-450b-ad47-5b154001095e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -230,7 +230,7 @@
         "import google.generativeai as genai\n",
         "\n",
         "# Defina sua chave de API aqui\n",
-        "api_key = \"AIzaSyBfl7K21buMaj8tIAyiS7sh3J5Qv1Gfq3w\"\n",
+        "api_key = \"xxxxxxxxxxxxxxxx\"\n",
         "\n",
         "genai.configure(api_key=api_key)\n",
         "\n",
